fix: redefine broken css specifiers

--- a/styles/content_scripts.css
+++ b/styles/content_scripts.css
@@ -3,22 +3,26 @@ body.replys-hide *[data-testid="replyBtn"] > div,
 body.replys-hover *[data-testid="replyBtn"]:not(:hover) > div,
 
 /* reposts */
+/* repostCount & repostCount-expanded */
 body.reposts-hide *[data-testid="repostCount"],
 body.reposts-hover div:has(div[data-testid="repostCount"]):not(:hover) > div[data-testid="repostCount"],
+body.reposts-hide *[data-testid="repostCount-expanded"] > span:nth-child(1),
+body.reposts-hover *[data-testid="repostCount-expanded"]:not(:hover) > span:nth-child(1),
 
 /* likes */
+/* likeCount & likeCount-expanded */
 body.likes-hide *[data-testid="likeBtn"] > div,
-body.likes-hide *[data-testid="likeCount"] > span:nth-child(1),
+body.likes-hide *[data-testid^="likeCount"] > span:nth-child(1),
 body.likes-hover *[data-testid="likeBtn"]:not(:hover) > div,
-body.likes-hover *[data-testid="likeCount"]:not(:hover) > span:nth-child(1),
+body.likes-hover *[data-testid^="likeCount"]:not(:hover) > span:nth-child(1),
 
 /* followers */
-body.followers-hide *[data-testid="profileHeaderFollowersButton"] > div:nth-child(1),
-body.followers-hover *[data-testid="profileHeaderFollowersButton"]:not(:hover) > div:nth-child(1),
+body.followers-hide *[data-testid="profileHeaderFollowersButton"] > span:nth-child(1),
+body.followers-hover *[data-testid="profileHeaderFollowersButton"]:not(:hover) > span:nth-child(1),
 
 /* follows */
-body.following-hide *[data-testid="profileHeaderFollowsButton"] > div:nth-child(1),
-body.following-hover *[data-testid="profileHeaderFollowsButton"]:not(:hover) > div:nth-child(1),
+body.following-hide *[data-testid="profileHeaderFollowsButton"] > span:nth-child(1),
+body.following-hover *[data-testid="profileHeaderFollowsButton"]:not(:hover) > span:nth-child(1),
 
 /* posts */
 body.posts-hide *[data-testid="profileHeaderFollowsButton"] + div,
@@ -42,10 +46,10 @@ body.notifications-hover a[href="/notifications"]:not(:hover) > div > div {
 /* notifications-list */
 /* single user (who liked your post) */
 body.notifications-list-hide div[data-testid="notificationsScreen"] div[role="link"][data-testid^="feedItem-by-"]
-> div:nth-child(2) > div:nth-child(3)[dir="auto"],
+> div > div:nth-child(2) > div:nth-child(3)[dir="auto"],
 /* multiple user (who and n others liked your post) */
 body.notifications-list-hide div[data-testid="notificationsScreen"] div[role="link"][data-testid^="feedItem-by-"]
-> div:nth-child(2) > div > div:nth-child(3)[dir="auto"] {
+> div > div:nth-child(2) > div > div:nth-child(3)[dir="auto"] {
   visibility: hidden;
   height: 2px;
   width: 1px;
@@ -58,11 +62,13 @@ body.invite-codes-hide div:has(div>div>div>input[data-testid="searchTextInput"])
 }
 
 /* blueswan emoji */
-body.blueswan-show div.css-175oi2r.r-u8s1d.r-c6jqw7.r-1ki14p2.r-1w88a7h > a[role="link"]:first-child::after {
-  content: '💙🦢';
-}
-body.blueswan-show div.css-175oi2r.r-u8s1d.r-c6jqw7.r-1ki14p2.r-1w88a7h > a[role="link"]:first-child:hover {
-  text-decoration: none !important;
+body.blueswan-show div.css-175oi2r.r-c4unlt.r-pgf20v.r-1rnoaur.r-1xcajam.r-1ki14p2.r-1w88a7h > a[role="link"]:first-child {
+  &::after {
+    content: '💙🦢';
+  }
+  &:hover {
+    text-decoration: none !important;
+  }
 }
 
 /* always show 'Repost' message in modal */
